--- a/style.css
+++ b/style.css
@@ -2,9 +2,28 @@ body {
   margin: 0;
   background: darkgray;
   overflow: hidden;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#myCanvas {
+#buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+#buttons button {
+  border: none;
+  border-radius: 5px;
+  padding: 5px 5px 7px 5px;
+  margin: 2px;
+  cursor: pointer;
+}
+
+#carCanvas {
   background: lightgray;
+}
+
+#networkCanvas {
+  background: black;
 }
